# CrewAI-Agentic-Email-Automation-

./: .env.example  .gitignore  API_EXAMPLES.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  download_kaggle_data.py  enhanced_dataset_manager.py  kaggle_demo.ipynb  lightweight_dataset_manager.py  ml_commands.py  pyproject.toml  test_crewai_pattern.py  test_crewai_tools.py  test_enhanced_model.py  test_ollama.py  train_enhanced_model.py
.github/workflows/: ci.yml
config/: agents.yaml  tasks.yaml
src/mail_agents/: __init__.py  agents.py  api.py  cli.py  config.py  data.py  model.py
src/mail_agents/crew/: __init__.py  agents.py  crew_manager.py  email_crew.py  tasks.py
src/mail_agents/crew/configs/: agents.yaml  crew.yaml  tasks.yaml
src/mail_agents/crew/tools/: __init__.py  email_tools.py
tests/: __init__.py  test_api.py  test_config.py  test_data.py  test_model.py
